doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -24,10 +24,13 @@
     Для Воплощения используйте соответствующую иконку в "Списке игроков"
     При Воплощении изменяется только  onlinetime  пользователя.  Вся  остальная
     информация (IP, User-agent итд) сохраняется
-    Если на аккаунте игрока есть ошибки, то попытке Воплощения  будет  выведено
-    сообщение об ошибке, которое увидел бы игрок  на  вашем  месте.  Обновление
-    страницы вернет вас в ваш аккаунт
     Для Развоплощения используйте соответствующий пункт меню или "Выход"
+    Если на аккаунте игрока есть ошибки  или  игрок  находится  в  отпуске,  то
+    попытке Воплощения будет выведено сообщение об ошибке/об  отпуске,  которое
+    увидел бы игрок на вашем  месте.  Обновление  страницы  вернет  вас  в  ваш
+    аккаунт
+    После штатного Развоплощения (т.е. из меню, а не при ошибке и не из  игрока
+    в отпуске) Администратора возвращает на страницу списка игроков
     ВНИМАНИЕ! Перед использованием Воплощения почистите куки в браузере!  Из-за
     изменений в работе кукесов кэш браузера может содержать дубликаты куков
 [!] Админка: Список игроков
