fix-FLT-34a3: Added more check for fleet sending

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a2.3#
+Текущая версия #34a3#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
@@ -48,12 +48,23 @@
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
+[~] Флоты
+    На странице выбора миссии таблица загрузки ресурсов по умолчанию отключена
+    Добавлено дополнительное сообщение при совпадении планеты отправки и пункта
+    назначения
+    Добавлено дополнительное сообщение при попытке отправить незагруженный флот
+    с миссией "Транспорт"
+    Добавлено дополнительное сообщение при попытке отправить флот с ресурсами в
+    миссию, отличную от миссий "Транспорт", "Передислокация" и "Колонизация"
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
 [%] Локализация/EN: Исправлены очепятки
 [%] Статистика: Исправлено неотображение пола игрока при просмотре статистики с
     экранов логина/регистрации
+[%] Меню: Исправлена ссылка с пункта "Статистика"
+[%] Флоты: Исправлена ошибка, дающая возможность отправить флот с  ресурсами  в
+    миссии "Атака" или "Удержание"
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
