feat-SYS-34a4: Birthday gift

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a3.2#
+Текущая версия #34a4#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
@@ -46,6 +46,25 @@
     чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
     ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
+[!] День Рождения: Добавлена подсистема подарков на ДР игрока
+    Игрок может ввести свой ДР на своей странице настроек. ДР вводится один раз
+    и  после  этого  не  может  быть  изменен.  Дата  проходит  валидизацию   в
+    соответствии с серверными настройками формата даты
+    Игрок с ДР на текущую дату будет отмечен специальной иконкой в статистике
+    Амдинистратор сервера может назначить количество  ТМ  в  подарок  на  ДР  в
+    настройках (опция "Подарок игроку на день  рождения").  Если  это  значение
+    установлено в 0 - подарки отключены.
+    Выдача подарков происходит один раз в сутки  всем  игрокам,  день  рождения
+    которых находится не далее чем в "Ретро-рождение"  дней  от  текущей  даты.
+    При этом подарки выдаются только игрокам,  которые  на  момент  выдачи  уже
+    имели введенную дату рождения. Движок гарантированно начислит подарки  даже
+    если  ДР  пришелся  на  день  неактивности   сервера   (неисправность   или
+    обслуживание).
+    Такая система выбрана с одной стороны - что бы не обидеть игроков в  случае
+    проблем с сервером, а с другой стороны - что  бы  избежать  злоупотреблений
+    (например - ввести послезавтрашнюю дату ДР, на следующий день  получить  ТМ
+    за "прошлый ДР", а через день -  еще  и  за  "нынешний".  Такой  вариант  в
+    текущей системе начисления подарков не прокатит)
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
