feat-SYS-34a4.1: Birthday date on tooltip over notification item

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a4#
+Текущая версия #34a4.1#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
@@ -50,12 +50,13 @@
     Игрок может ввести свой ДР на своей странице настроек. ДР вводится один раз
     и  после  этого  не  может  быть  изменен.  Дата  проходит  валидизацию   в
     соответствии с серверными настройками формата даты
-    Игрок с ДР на текущую дату будет отмечен специальной иконкой в статистике
+    Игрок с ДР на текущую дату будет отмечен специальной иконкой в  статистике.
+    При наведении на иконку всплывает подсказка с датой рождения
     Амдинистратор сервера может назначить количество  ТМ  в  подарок  на  ДР  в
     настройках (опция "Подарок игроку на день  рождения").  Если  это  значение
     установлено в 0 - подарки отключены.
     Выдача подарков происходит один раз в сутки  всем  игрокам,  день  рождения
-    которых находится не далее чем в "Ретро-рождение"  дней  от  текущей  даты.
+    которых находится не далее чем в "Ретро-рождение" дней от текущей даты.
     При этом подарки выдаются только игрокам,  которые  на  момент  выдачи  уже
     имели введенную дату рождения. Движок гарантированно начислит подарки  даже
     если  ДР  пришелся  на  день  неактивности   сервера   (неисправность   или
