misc-SYS-34a4.2: Added birthday icon to Universe view

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a4.1#
+Текущая версия #34a4.2#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
@@ -50,8 +50,9 @@
     Игрок может ввести свой ДР на своей странице настроек. ДР вводится один раз
     и  после  этого  не  может  быть  изменен.  Дата  проходит  валидизацию   в
     соответствии с серверными настройками формата даты
-    Игрок с ДР на текущую дату будет отмечен специальной иконкой в  статистике.
-    При наведении на иконку всплывает подсказка с датой рождения
+    Игрок с ДР на текущую дату будет отмечен специальной иконкой в статистике и
+    на странице Вселенной. При наведении на иконку всплывает подсказка с  датой
+    рождения
     Амдинистратор сервера может назначить количество  ТМ  в  подарок  на  ДР  в
     настройках (опция "Подарок игроку на день  рождения").  Если  это  значение
     установлено в 0 - подарки отключены.
