feat-ECO-34a5: Hangar code entirly rewrited. Missiles rebalanced

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a4.2#
+Текущая версия #34a5#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
@@ -68,6 +68,9 @@
     за "прошлый ДР", а через день -  еще  и  за  "нынешний".  Такой  вариант  в
     текущей системе начисления подарков не прокатит)
 
+[+] Верфь
+    Полностью переписана работы верфи
+
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
     На странице выбора миссии таблица загрузки ресурсов по умолчанию отключена
@@ -77,6 +80,14 @@
     с миссией "Транспорт"
     Добавлено дополнительное сообщение при попытке отправить флот с ресурсами в
     миссию, отличную от миссий "Транспорт", "Передислокация" и "Колонизация"
+[~] Очередь верфи
+    Теперь так же показывается количество юнитов, когда юнит один в очереди
+[~] Ракеты: небольшой ребаланс ракет
+    Емкость шахты увеличена до 12-и, а размер межпланетной ракеты  увеличен  до
+    3-х. Таким образом на один уровень шахты теперь влазит 12 перехватчиков или
+    4  ракеты  (вместо  10  перехватчиков  и  5   ракет,   как   было   ранее),
+    а количество ракет к перехватчикам на уровень шахты увеличилось до  3  к  1
+    вместо 2 к 1. Мощность ракет осталась прежней
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -86,10 +97,14 @@
 [%] Меню: Исправлена ссылка с пункта "Статистика"
 [%] Флоты: Исправлена ошибка, дающая возможность отправить флот с  ресурсами  в
     миссии "Атака" или "Удержание"
+[%] Очередь верфи и исследований: Исправлена ошибка с индикацией конца  очереди
+    - "undefined" вместо "Очередь пуста"
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
     /docs/install.txt, подраздел "Magic Quotes"
+[@] Юниты: Добавлена дополнительный аттрибут "max" ко всем юнитам и  его  общая
+    проверка в eco_get_build_data()
 
 
 
