feat-MOD-34a6: Added basic payment module support. Rewrited server root detection routine

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,10 @@
 
 
 
-Текущая версия #34a5#
+Текущая версия #34a6#
 ~~~~~~~~~~~~~~~~~~~~~
+[!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
+    базовые настройки, строки локализации и константы
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
     поуправлять игрой его... эээ... интерфейсом!
@@ -67,9 +69,7 @@
     (например - ввести послезавтрашнюю дату ДР, на следующий день  получить  ТМ
     за "прошлый ДР", а через день -  еще  и  за  "нынешний".  Такой  вариант  в
     текущей системе начисления подарков не прокатит)
-
-[+] Верфь
-    Полностью переписана работы верфи
+[!] Верфь: Полностью переписана работа верфи
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -88,6 +88,7 @@
     4  ракеты  (вместо  10  перехватчиков  и  5   ракет,   как   было   ранее),
     а количество ракет к перехватчикам на уровень шахты увеличилось до  3  к  1
     вместо 2 к 1. Мощность ракет осталась прежней
+[~] Система: Усовершенствован способ определения корневого каталога игры
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
