feat-INT-34a7: Iconized navbar

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a6.1#
+Текущая версия #34a7#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -70,6 +70,9 @@
     за "прошлый ДР", а через день -  еще  и  за  "нынешний".  Такой  вариант  в
     текущей системе начисления подарков не прокатит)
 [!] Верфь: Полностью переписана работа верфи
+[!] Навбар: Полностью переработан навбар.
+    Вся информация теперь выводится поверх кликабельных иконок  с  всплывающими
+    подсказками
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
