--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -73,6 +73,7 @@
 [!] Навбар: Полностью переработан навбар.
     Вся информация теперь выводится поверх кликабельных иконок  с  всплывающими
     подсказками
+    Добавлена информация о текущих исследованиях пользователя
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
