--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a7#
+Текущая версия #34a7.1#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -104,6 +104,7 @@
     миссии "Атака" или "Удержание"
 [%] Очередь верфи и исследований: Исправлена ошибка с индикацией конца  очереди
     - "undefined" вместо "Очередь пуста"
+[%] Админка: Закрыты защитой по authlevel не закрытые ранее файлы
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
