misc-LNG-34a7.2: Fixed typos in EN localization

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a7.1#
+Текущая версия #34a7.2#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -502,6 +502,7 @@ Project "SuperNova.WS" Release 33 "Women Day v2012!"
 [%] Альянсы: Исправлена ошибка выхода из Альянса - у игрока  не  затирался  тэг
     Альянса
 [%] Флоты: Исправлена уязвимость, позволяющая дублировать флоты
+[%] Локализация/EN: Исправлены очепятки, спасибо tedk28
 
 [@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
