fix-ECO-34a7.3: Fixed buguse with structures creation/demolition on slow connections. Fixed not counting Allie's bonus on hangar

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a7.2#
+Текущая версия #34a7.3#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -105,6 +105,10 @@
 [%] Очередь верфи и исследований: Исправлена ошибка с индикацией конца  очереди
     - "undefined" вместо "Очередь пуста"
 [%] Админка: Закрыты защитой по authlevel не закрытые ранее файлы
+[%] Альянсы: Исправлена ошибка  незасчета  уровня  технологии  при  составлении
+    списка доступных к постройке юнитов на верфи (корабли и оборона)
+[%] Экономика/Строительство: Исправлен ошибка багоюз медленных  соединений  при
+    постройке зданий
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
