feat-PAY-34a8: Payment interface

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a7.3#
+Текущая версия #34a8#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -74,6 +74,9 @@
     Вся информация теперь выводится поверх кликабельных иконок  с  всплывающими
     подсказками
     Добавлена информация о текущих исследованиях пользователя
+[!] Покупка ТМ (требуется модуль платежной системы)
+    Интерфейс покупки ТМ
+    Поддержка payment_xsolla_currency v0.0a2+
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
