--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a8#
+Текущая версия #34a8.1#
 ~~~~~~~~~~~~~~~~~~~~~
 [!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
     базовые настройки, строки локализации и константы
@@ -76,7 +76,7 @@
     Добавлена информация о текущих исследованиях пользователя
 [!] Покупка ТМ (требуется модуль платежной системы)
     Интерфейс покупки ТМ
-    Поддержка payment_xsolla_currency v0.0a2+
+    Поддержка payment_xsolla_currency v1b0
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
