SYS-feat-34a9: Automatic module loading & registration & function overriding. Support for admin_planet_edit_extra v1c0

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,10 +11,25 @@
 
 
 
-Текущая версия #34a8.1#
-~~~~~~~~~~~~~~~~~~~~~
-[!] Система: Добавлена базовая поддержка платежных модулей:  таблица  платежей,
-    базовые настройки, строки локализации и константы
+Текущая версия #34a9#
+~~~~~~~~~~~~~~~~~~~~~~~
+[#] Админка: Редактирование характеристик планеты
+    Модуль admin_planet_edit_extra v1c0
+    В  админке  можно  менять  основные   характеристики   планеты:   название,
+    изображение, размер, температуру, губернатора  и  его  уровень,  количество
+    обломков на орбите
+
+[#] Покупка ТМ: Модуль платежной системы XSolla
+    Модуль payment_xsolla_currency v1b0
+    Реализован протокол "Виртуальная валюта" (без отката платежей)
+    Поддержка плагина PayStation
+
+[!] Покупка ТМ
+    Добавлена поддержка платежных модулей: таблица платежей, базовые настройки,
+    строки локализации и константы
+    Добавлен интерфейс покупки ТМ (требуется  хотя  бы  один  модуль  платежной
+    системы)
+    Поддержка payment_xsolla_currency v1b0
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
     поуправлять игрой его... эээ... интерфейсом!
@@ -44,10 +59,6 @@
     добавляется количество игроков с таким же адресом
     Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
     разборок между членами команды одного уровня
-[!] Из данного файла удалена информация о ранних релизах (до момента разделения
-    чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
-    ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
-    можно в девелоперском чейнджлоге /docs/changelog_dev.txt
 [!] День Рождения: Добавлена подсистема подарков на ДР игрока
     Игрок может ввести свой ДР на своей странице настроек. ДР вводится один раз
     и  после  этого  не  может  быть  изменен.  Дата  проходит  валидизацию   в
@@ -69,14 +80,15 @@
     (например - ввести послезавтрашнюю дату ДР, на следующий день  получить  ТМ
     за "прошлый ДР", а через день -  еще  и  за  "нынешний".  Такой  вариант  в
     текущей системе начисления подарков не прокатит)
-[!] Верфь: Полностью переписана работа верфи
 [!] Навбар: Полностью переработан навбар.
     Вся информация теперь выводится поверх кликабельных иконок  с  всплывающими
     подсказками
     Добавлена информация о текущих исследованиях пользователя
-[!] Покупка ТМ (требуется модуль платежной системы)
-    Интерфейс покупки ТМ
-    Поддержка payment_xsolla_currency v1b0
+[!] Верфь: Полностью переписана работа верфи
+[!] Из данного файла удалена информация о ранних релизах (до момента разделения
+    чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
+    ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
+    можно в девелоперском чейнджлоге /docs/changelog_dev.txt
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -96,6 +108,9 @@
     а количество ракет к перехватчикам на уровень шахты увеличилось до  3  к  1
     вместо 2 к 1. Мощность ракет осталась прежней
 [~] Система: Усовершенствован способ определения корневого каталога игры
+[~] Админка/Редактирование планеты
+    Добавлено форматирование количества юнитов/ресурсов на планете
+    Поддержка admin_planet_edit_extra v1c0
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -118,6 +133,12 @@
     /docs/install.txt, подраздел "Magic Quotes"
 [@] Юниты: Добавлена дополнительный аттрибут "max" ко всем юнитам и  его  общая
     проверка в eco_get_build_data()
+[@] Модули
+    Теперь можно перекрывать функции методами из класса
+    Автоматическая загрузка и регистрация модулей
+    Автоматическое перекрытие функций методами модуля из $manifest
+[@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
+    страницей
 
 
 
