SYS-misc-34a9.2: See changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a9#
+Текущая версия #34a9.2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -89,6 +89,8 @@
     чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
     ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
+[+] Локализация: Добавлена система отката языков в случае, если включаемый файл
+    не найден в указанном месте движка/для указанного языка
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -111,6 +113,7 @@
 [~] Админка/Редактирование планеты
     Добавлено форматирование количества юнитов/ресурсов на планете
     Поддержка admin_planet_edit_extra v1c0
+[~] Продажа ТМ: Доработан дизайн страницы. Добавлена информация о бонусах
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -127,6 +130,8 @@
     списка доступных к постройке юнитов на верфи (корабли и оборона)
 [%] Экономика/Строительство: Исправлен ошибка багоюз медленных  соединений  при
     постройке зданий
+[%] Админка/Редактор локализаций
+    Добавлена поддержка констант SNC_VER_ в домене 'admin'
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
@@ -137,6 +142,7 @@
     Теперь можно перекрывать функции методами из класса
     Автоматическая загрузка и регистрация модулей
     Автоматическое перекрытие функций методами модуля из $manifest
+    Автоматическая загрузка конфигурации модуля из файла
 [@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
     страницей
 
