PAY-feat-34a10: Added support of 'GET' and 'POST' methods on payment systems

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a9.2#
+Текущая версия #34a10#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -25,11 +25,11 @@
     Поддержка плагина PayStation
 
 [!] Покупка ТМ
-    Добавлена поддержка платежных модулей: таблица платежей, базовые настройки,
-    строки локализации и константы
-    Добавлен интерфейс покупки ТМ (требуется  хотя  бы  один  модуль  платежной
-    системы)
+    Поддержка платежных модулей: таблица платежей,  базовые  настройки,  строки
+    локализации и константы
+    Интерфейс покупки ТМ (требуется хотя бы один модуль платежной системы)
     Поддержка payment_xsolla_currency v1b0
+    Поддержка методов 'LINK', 'GET' и 'POST' в системах платежа
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
     поуправлять игрой его... эээ... интерфейсом!
