RPG-feat-34a11: Blueprints - access to build units

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a10.2#
+Текущая версия #34a11#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -50,15 +50,18 @@
     в отпуске) Администратора возвращает на страницу списка игроков
     ВНИМАНИЕ! Перед использованием Воплощения почистите куки в браузере!  Из-за
     изменений в работе кукесов кэш браузера может содержать дубликаты куков
-[!] Админка: Список игроков
-    Полностью переписан "Список игроков" с использованием PTE
-    Сокращено количество строк локализации
-    Альянсы-игроки больше не выводятся в списке
-    Пишется полный срок бана
-    Для мультиаккаунтов подсвечиваются все адреса с одинаковым IP и  в  скобках
-    добавляется количество игроков с таким же адресом
-    Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
-    разборок между членами команды одного уровня
+[!] Чертежи
+    "Чертеж" - это  программный  пакет,  дающий  доступ  к  производсту  юнитов
+    определенного типа. Доступны следующие чертежи:
+    1. Здания: термоядерная электростанция
+    2. Корабли: супертранспорт, гипертранспорт, Звезда Смерти, "Сверхновая"
+    3. Защитные постройки: планетарная защиат
+    Чертеж  покупается  на  Империю,  после  чего  указанный  юнит  доступен  к
+    производству на всех планетах
+    Чертеж является перманентым
+    Чертежи  заменяют  Наемников  в  требованиях к постройке
+    Наемники "Разрушитель" и "Ассасин" сконвертированы соответственно в "Чертеж
+    ЗС" и "Чертеж СН". Остальные четрежи надо покупать самостоятельно
 [!] День Рождения: Добавлена подсистема подарков на ДР игрока
     Игрок может ввести свой ДР на своей странице настроек. ДР вводится один раз
     и  после  этого  не  может  быть  изменен.  Дата  проходит  валидизацию   в
@@ -84,11 +87,21 @@
     Вся информация теперь выводится поверх кликабельных иконок  с  всплывающими
     подсказками
     Добавлена информация о текущих исследованиях пользователя
+[!] Админка: Список игроков
+    Полностью переписан "Список игроков" с использованием PTE
+    Сокращено количество строк локализации
+    Альянсы-игроки больше не выводятся в списке
+    Пишется полный срок бана
+    Для мультиаккаунтов подсвечиваются все адреса с одинаковым IP и  в  скобках
+    добавляется количество игроков с таким же адресом
+    Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
+    разборок между членами команды одного уровня
 [!] Верфь: Полностью переписана работа верфи
 [!] Из данного файла удалена информация о ранних релизах (до момента разделения
     чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
     ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
+
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
 
