INT-misc-34a11.3: Expedition navbar widget now leads to send fleet page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a11.2#
+Текущая версия #34a11.3#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -127,6 +127,7 @@
     Добавлено форматирование количества юнитов/ресурсов на планете
     Поддержка admin_planet_edit_extra v1c0
 [~] Продажа ТМ: Доработан дизайн страницы. Добавлена информация о бонусах
+[~] Навбар: Виджет экспедиций теперь ведет на страницу отправки флотов
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
