SYS-misc-34a11.5: All unit types adjusted to UNIT_xxx. All units now has their types assigned

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a11.4#
+Текущая версия #34a11.5#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -159,6 +159,8 @@
     Автоматическая загрузка конфигурации модуля из файла
 [@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
     страницей
+[@] Константы типов юнитов приведены к единому формату "UNIT_xxx"
+[@] Всем юнитам прописаны типы
 
 
 
