--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a11.6#
+Текущая версия #34a11.7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -124,6 +124,8 @@
     вместо 2 к 1. Мощность ракет осталась прежней
 [~] Система: Усовершенствован способ определения корневого каталога игры
 [~] Админка/Редактирование планеты
+    При выбранной планете невозможно изменить её ID для  исключения  перезаписи
+    информации о текущей планете
     Добавлено форматирование количества юнитов/ресурсов на планете
     Поддержка admin_planet_edit_extra v1c0
 [~] Продажа ТМ: Доработан дизайн страницы. Добавлена информация о бонусах
