INT-fix-34a11.8: 'no resources' on hangars replaced with appropriate locale

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a11.7#
+Текущая версия #34a11.8#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -148,6 +148,8 @@
     постройке зданий
 [%] Админка/Редактор локализаций
     Добавлена поддержка констант SNC_VER_ в домене 'admin'
+[%] Верфи
+    Сообщение "no resources" заменено на соответстующую локализацию
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
