GIT: Resolved branch conflict

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -148,6 +148,8 @@
     постройке зданий
 [%] Админка/Редактор локализаций
     Добавлена поддержка констант SNC_VER_ в домене 'admin'
+[%] Исследования: Исправлена ошибка повторного начисления ресурсов  при  отмене
+    исследования
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
