--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a11.13#
+Текущая версия #34a12#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -96,6 +96,11 @@
     добавляется количество игроков с таким же адресом
     Теперь невозможно удалить  игрока  того  же  уровня  -  для  предотвращения
     разборок между членами команды одного уровня
+[!] Админка: Параметры MySQL сервера
+    В админку на страницу утилит  добавлен  вывод  информации  о  настройках  и
+    параметрах MySQL сервера
+[!] Админка: Шифрование пароля
+    Полностью переписана утилита шифрования пароля в MD5
 [!] Верфь: Полностью переписана работа верфи
 [!] Из данного файла удалена информация о ранних релизах (до момента разделения
     чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
