--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a12.2#
+Текущая версия #34a13#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -135,6 +135,9 @@
     Поддержка admin_planet_edit_extra v1c0
 [~] Продажа ТМ: Доработан дизайн страницы. Добавлена информация о бонусах
 [~] Навбар: Виджет экспедиций теперь ведет на страницу отправки флотов
+[~] События флотов
+    Фаланга теперь показывает входящие и исходящие ракетные атаки
+    Индикатор атаки на планету теперь так же реагирует на ракетные атаки
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -170,6 +173,8 @@
     страницей
 [@] Константы типов юнитов приведены к единому формату "UNIT_xxx"
 [@] Всем юнитам прописаны типы
+[@] События флотов
+    Переработана система событий флотов
 
 
 
