SKN-misc-34a14.3: Updated skin 'supernova-ivash'

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.2#
+Текущая версия #34a14.3#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -138,6 +138,7 @@
 [~] События флотов
     Фаланга теперь показывает входящие и исходящие ракетные атаки
     Индикатор атаки на планету теперь так же реагирует на ракетные атаки
+[~] Скины: Обновлен скин supernova-ivash
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
