ART-fix-34a14.4: Now RCD can be deployed only on planet without construction activity to prevent gaining extra resources from cancelling building que

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.3#
+Текущая версия #34a14.4#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -159,6 +159,9 @@
     Добавлена поддержка констант SNC_VER_ в домене 'admin'
 [%] Исследования: Исправлена ошибка повторного начисления ресурсов  при  отмене
     исследования
+[%] Артефакты
+    Исправлена ошибка, когда АКК мог быть развернут на  планете  с  уже  идущим
+    строительством
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
