--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.4#
+Текущая версия #34a14.5#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -162,6 +162,10 @@
 [%] Артефакты
     Исправлена ошибка, когда АКК мог быть развернут на  планете  с  уже  идущим
     строительством
+[%] Флоты
+    Исправлена  мгновенная  скорость  полета  если  для   двигателей   кораблей
+    соответствующие технологии еще не исследованы (например - корабль куплен на
+    ЧР или найден в экспедиции)
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
