--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.5#
+Текущая версия #34a14.6#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -55,7 +55,7 @@
     определенного типа. Доступны следующие чертежи:
     1. Здания: термоядерная электростанция
     2. Корабли: супертранспорт, гипертранспорт, Звезда Смерти, "Сверхновая"
-    3. Защитные постройки: планетарная защиат
+    3. Защитные постройки: планетарная защита
     Чертеж  покупается  на  Империю,  после  чего  указанный  юнит  доступен  к
     производству на всех планетах
     Чертеж является перманентым
@@ -139,6 +139,10 @@
     Фаланга теперь показывает входящие и исходящие ракетные атаки
     Индикатор атаки на планету теперь так же реагирует на ракетные атаки
 [~] Скины: Обновлен скин supernova-ivash
+[~] Меню
+    Добавлена дата запуска сервера (под логотипом). Для уже запущенных серверов
+    она  равна  дате  запуска  апдейта.  Она  хранится  в  таблице  `config`  в
+    переменной "server_start_date"
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
