ADM-misc-34a14.7: When Impersonating in banned user admin automatically deimpersonates and return to his account

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.6#
+Текущая версия #34a14.7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -143,6 +143,8 @@
     Добавлена дата запуска сервера (под логотипом). Для уже запущенных серверов
     она  равна  дате  запуска  апдейта.  Она  хранится  в  таблице  `config`  в
     переменной "server_start_date"
+[~] Воплощение: Теперь при Воплощении  в  забаненного  персонажа  администратор
+    автоматически развоплощается
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
