LNG-fix-34a14.8: Fixed locale typos and missed strings

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a14.7#
+Текущая версия #34a14.8#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -172,6 +172,7 @@
     Исправлена  мгновенная  скорость  полета  если  для   двигателей   кораблей
     соответствующие технологии еще не исследованы (например - корабль куплен на
     ЧР или найден в экспедиции)
+[%] Локализация/EN: Исправлены очепятки
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
