SYS-feat-34a16: Full support for function chain-override with result backtracking. Preliminary support for player_premium module

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a15.2#
+Текущая версия #34a16#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -23,6 +23,9 @@
     Модуль payment_xsolla_currency v1b0
     Реализован протокол "Виртуальная валюта" (без отката платежей)
     Поддержка плагина PayStation
+
+[#] Премиумные аккаунты
+    Базовая поддержка основных функций модуля
 
 [!] Покупка ТМ
     Поддержка платежных модулей: таблица платежей,  базовые  настройки,  строки
@@ -119,6 +122,7 @@
     до 500, фактор увеличен до 1.65. У нанятых инженеров уровень понижен в  два
     раза с округлением в большую сторону. В целом  это  означает,  что  Инженер
     стоит дешевле в пересчете на эффективный уровень.
+[+] MVC: Базовая поддержка MVC
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -190,19 +194,23 @@
     /docs/install.txt, подраздел "Magic Quotes"
 [@] Юниты: Добавлена дополнительный аттрибут "max" ко всем юнитам и  его  общая
     проверка в eco_get_build_data()
+[@] Меню
+    Меню теперь является динамическим
 [@] Модули
-    Теперь можно перекрывать функции методами из класса
     Автоматическая загрузка и регистрация модулей
     Автоматическое перекрытие функций методами модуля из $manifest
+    Автоматическое подгрузка специфических пунктов меню
     Автоматическая загрузка конфигурации модуля из файла
+    Теперь можно перекрывать функции методами из класса
+    Добавлена поддержка  "цепи  перекрытий".  Можно  протаскивать  сквозь  цепь
+    результат вычислений, модифицируя его на каждом шагу (см. пример реализации
+    перекрытия mrc_get_level)
 [@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
     страницей
 [@] Константы типов юнитов приведены к единому формату "UNIT_xxx"
 [@] Всем юнитам прописаны типы
 [@] События флотов
     Переработана система событий флотов
-[@] Модули
-    Добавлена поддержка "цепи перекрытий"
 [@] Файлы
     Расширение файлов локализации изменено с  ".mo"  на  ".mo.php"  для  лучшей
     поддержки в различных IDE
@@ -210,13 +218,12 @@
     В дополнение к стандартным путям  "language/<ISO2>/<domain>.mo.php"  теперь
     так же  поддерживаются  пути  вида  "language/<domain>_<ISO2>.mo.php".  Это
     сделано для упрощения структуры подкаталогов в модуле
-[@] Меню
-    Меню теперь является динамическим
 [@] Очереди
     Упразднена  константа  MAX_BUILDING_QUEUE_SIZE.   Теперь   размер   очереди
     построек зданий и верфи/обороны задается переменными из таблицы `config`  -
     соотвественно 'server_que_length_structures' и  'server_que_length_hangar'.
     По умолчанию их значения равны 5
+
 
 
 Project "SuperNova.WS" Release 33 "Women Day v2012!"
