SKN-misc-34a16.1: Redesigned CSS - now used one file instead of two. Redesigned skin for menu. EpicBlue and supernova-ivash now respecting new menu skin layout.

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a16#
+Текущая версия #34a16.1#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -159,6 +159,8 @@
     переменной "server_start_date"
 [~] Воплощение: Теперь при Воплощении  в  забаненного  персонажа  администратор
     автоматически развоплощается
+[~] Меню
+    Пункты "Технология" и "Квесты" перемещены в раздел "Информация"
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -223,6 +225,18 @@
     построек зданий и верфи/обороны задается переменными из таблицы `config`  -
     соотвественно 'server_que_length_structures' и  'server_que_length_hangar'.
     По умолчанию их значения равны 5
+[@] Скины
+    Изменена  организация  CSS-файлов.  Файл   "formate.css"   переименован   в
+    "skin.css". К нему присоединен в конце файл  "default.css".  Таким  образом
+    сохранена последовательность загрузки стилей и при  этом  все  стили  скина
+    находятся теперь в одном файле
+    Изменена система раскраски меню. Теперь каждому пункту  меню  присваиваются
+    присваиваются собственные аттрибуты HTML ID и CLASS.  КРАЙНЕ  рекомендуется
+    производить раскраску меню через аттрибут  ID  (см.  пример  в  formate.css
+    скина EpicBlue). Список ID элементов меню  можно  узнать  либо  в  браузере
+    (используя  функцию  "Inspect  Element"  или  аналогичную),  либо  в  файле
+    /includes/template.php, функция tpl_render_menu(), переменная $sn_menu
+    supernova-ivash: Скин приведен в соответствие с текущим положением дел
 
 
 
