MOD-fear-34a17: Support for player_premium v1a0

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a16.2#
+Текущая версия #34a17#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -24,8 +24,10 @@
     Реализован протокол "Виртуальная валюта" (без отката платежей)
     Поддержка плагина PayStation
 
-[#] Премиумные аккаунты
+[#] Премиумный аккаунт
+    Модуль player_premium v1a0
     Базовая поддержка основных функций модуля
+    Добавлен интерфейс покупки премиумного аккаунта
 
 [!] Покупка ТМ
     Поддержка платежных модулей: таблица платежей,  базовые  настройки,  строки
@@ -161,6 +163,19 @@
     автоматически развоплощается
 [~] Меню
     Пункты "Технология" и "Квесты" перемещены в раздел "Информация"
+[~] Офицеры: Академик, Фортификатор, Инженер
+    Изменена логика работы Академика, Фортификатора и Инженера. Все они  влияют
+    на скорость постройки юнитов, однако раньше  зависимость  была  практически
+    экспоненциальная. Вдобавок слишком большой бонус от Академика в  Альянсе  в
+    сочетании с полностью  прокачанным  Наемником  у  игрока  мог  приводить  к
+    артефактам в работе исследований
+    Теперь бонус указанных офицеров - это процент увеличения скорости постройки
+    соответствующих  юнитов,  а  не  процент,  на  который  уменьшается   время
+    постройки. Т.е. это - слагаемое в знаменатели дроби. Если  говорить  совсем
+    просто: 100% бонуса от офицера уменьшают время постройки юнита  в  2  раза,
+    200% - в три раза, 300% - в четыре раза и так далее
+    В связи с данными изменениями  сняты  ограничения  на  максимальные  уровни
+    данных офицеров. Кроме того, бонус Академика увеличен с 5% до 10%
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -190,6 +205,7 @@
     ЧР или найден в экспедиции)
 [%] Локализация/EN: Исправлены очепятки
 [%] Фаланга: Исправлена уязвимость в отправке флота
+[%] Исправлена ошибка вычисления стоимости Наемников
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
@@ -207,6 +223,16 @@
     Добавлена поддержка  "цепи  перекрытий".  Можно  протаскивать  сквозь  цепь
     результат вычислений, модифицируя его на каждом шагу (см. пример реализации
     перекрытия mrc_get_level)
+    Теперь в манифесте модуля можно задавать  список  констант,  которые  будут
+    автоматически назначены при его инициализации
+    Теперь  в  манифесте  модуля  можно  задавать  список  переменных,  которые
+    автоматически заменят (в случае обычных переменных) или дополнят (в  случае
+    одноуровневых массивов) соответствующие глобальные переменные.  Специальный
+    механизм гарантирует корректную работу с константами в таких  переменных  и
+    массивах - даже  тех,  которые  были  только  назначены  при  инициализации
+    модуля
+    Теперь  при  инициализации  модуля  в  цепочку  вызовов  функций  корректно
+    инсталлируется оригинальная основная функция из движка
 [@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
     страницей
 [@] Константы типов юнитов приведены к единому формату "UNIT_xxx"
@@ -237,6 +263,9 @@
     (используя  функцию  "Inspect  Element"  или  аналогичную),  либо  в  файле
     /includes/template.php, функция tpl_render_menu(), переменная $sn_menu
     supernova-ivash: Скин приведен в соответствие с текущим положением дел
+    В базовый CSS перенесено цветовое кодирование чисел  и  сообщений  (ошибка,
+    предупреждение итд). При желании они  могут  быть  перекрыти  в  CSS-файлах
+    стилей
 
 
 
