--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -175,7 +175,8 @@
     просто: 100% бонуса от офицера уменьшают время постройки юнита  в  2  раза,
     200% - в три раза, 300% - в четыре раза и так далее
     В связи с данными изменениями  сняты  ограничения  на  максимальные  уровни
-    данных офицеров. Кроме того, бонус Академика увеличен с 5% до 10%
+    Фортификатора и Инженера. Кроме того, бонус Академика увеличен с 5% до 10%,
+    а его максимальный уровень - до 30
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
