CHT-misc-34a17.1: Premium accounts now highlights in chat

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a17#
+Текущая версия #34a17.1#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -177,6 +177,7 @@
     В связи с данными изменениями  сняты  ограничения  на  максимальные  уровни
     Фортификатора и Инженера. Кроме того, бонус Академика увеличен с 5% до 10%,
     а его максимальный уровень - до 30
+[~] Чат: Ник премиумного аккаунта выделяется (по умолчанию - желтым цветом)
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -267,6 +268,10 @@
     В базовый CSS перенесено цветовое кодирование чисел  и  сообщений  (ошибка,
     предупреждение итд). При желании они  могут  быть  перекрыти  в  CSS-файлах
     стилей
+    Выделение Администрации и  премиумных  аккаунтов  проводится  через  стили.
+    Соответственно,  в  основной  скин  добавлены  стили  классов  .nick_admin,
+    .nick_operator, .nick_moderator и  .nick_premium.  Естественно,  они  могут
+    быть перекрыти в скинах
 
 
 
