--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a17.4#
+Текущая версия #34a18#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -111,6 +111,16 @@
     чейнджлога на девелоперский и пользовательский, т.е. начиная с релиза 25  и
     ранее) что бы исключить дублирование информации. Посмотреть эту  информацию
     можно в девелоперском чейнджлоге /docs/changelog_dev.txt
+[!] Статистика
+    Полностью переписана страница вывода статистики игроков и Альянсов
+    Она теперь использует PTE
+    Полностью переписаны алгоритмы работы страницы
+    Для игроков добавлены отображение следующих  видов  статистики:  "Проведено
+    боев", "Выиграно боев", "Проиграно боев", "Уровень за постройки",  "Уровень
+    за исследования", "Уровень  за  рейдерство".  В  качестве  исходных  данных
+    используется информация из записей игроков (т.е. актуальная  информация  на
+    момент просмотра статистики), поэтому изменение для данных типов статистики
+    всегда будет равно 0
 
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
@@ -260,20 +270,27 @@
     "skin.css". К нему присоединен в конце файл  "default.css".  Таким  образом
     сохранена последовательность загрузки стилей и при  этом  все  стили  скина
     находятся теперь в одном файле
+    Теперь движок подгружает файл "/design/css/global_server.css" .  Этот  файл
+    может использоваться для добавления специфичных глобальных стилей сервера -
+    он не входит в дистрибутив и не будет перезаписан  при  обновлении  движка.
+    Файл  грузится  после  "global.css"  и,  следовательно,  может  перекрывать
+    глобальные стили "по умолчанию". Однако он грузится после скинового CSS  и,
+    следовательно, будет  перекрыт стилями скина
     Изменена система раскраски меню. Теперь каждому пункту  меню  присваиваются
     присваиваются собственные аттрибуты HTML ID и CLASS.  КРАЙНЕ  рекомендуется
     производить раскраску меню через аттрибут  ID  (см.  пример  в  formate.css
     скина EpicBlue). Список ID элементов меню  можно  узнать  либо  в  браузере
     (используя  функцию  "Inspect  Element"  или  аналогичную),  либо  в  файле
-    /includes/template.php, функция tpl_render_menu(), переменная $sn_menu
-    supernova-ivash: Скин приведен в соответствие с текущим положением дел
+    "/includes/template.php", функция tpl_render_menu(), переменная $sn_menu
     В базовый CSS перенесено цветовое кодирование чисел  и  сообщений  (ошибка,
     предупреждение итд). При желании они  могут  быть  перекрыти  в  CSS-файлах
     стилей
     Выделение Администрации и  премиумных  аккаунтов  проводится  через  стили.
-    Соответственно,  в  основной  скин  добавлены  стили  классов  .nick_admin,
-    .nick_operator, .nick_moderator и  .nick_premium.  Естественно,  они  могут
-    быть перекрыти в скинах
+    Соответственно,  в  основной  скин  добавлены  стили  классов  ".nick_admin",
+    ".nick_operator", ".nick_moderator"  и  ".nick_premium"
+    Добавлены  классы  ".same_alliance"  и  ".same_player"  для   выделения   в
+    статистике соответственно Альянса игрока и самого игрока
+    supernova-ivash: Скин приведен в соответствие с текущим положением дел
 
 
 
